--- a/report/Technical documentation/descripcion_general.tex
+++ b/report/Technical documentation/descripcion_general.tex
@@ -1,8 +1,4 @@
 El proyecto se encuentra dividido en tres módulos, correspondientes a las aplicaciones de cliente, servidor y editor.\\
-\indent El cliente es una aplicación gráfica que permite conectarse al servidor indicando la ip del mismo y el puerto. Una vez conectado existen dos opciones, crear una partida, o unirse a una existente. En caso de crear una partida, el servidor envía la información de todos los niveles existentes al cliente (nombre y cantidad de jugadores), y una vez que se selecciona uno, envía el archivo correspondiente al mismo, que está en formato \textit{YAML}, y sus fondos (arhcivos \textit{png}), crea la partida y queda a la espera de que se conecten los jugadores faltantes para inciarla. Si se selecciona la opción de unirse a una partida, el servidor envía al cliente todas las partidas que están disponibles (cantidad de jugadores actual en la partida y cantidad de jugadores necesarios para inciarla), es decir aquellas que no comenzaron aún. Cuando el cliente se une a una partida, el servidor envía el archivo correspondiente al nivel y los fondos del mismo. Cuando se unió el último jugador necesario para iniciar la partida, esta comienza.\\
+\indent El cliente es una aplicación gráfica que permite conectarse al servidor indicando la ip del mismo y el puerto. Una vez conectado existen dos opciones, crear una partida, o unirse a una existente. En caso de crear una partida, el servidor envía la información de todos los niveles existentes al cliente (nombre y cantidad de jugadores), y una vez que se selecciona uno, envía el archivo correspondiente al mismo, que está en formato \textit{YAML}, y sus fondos (archivos \textit{png}), crea la partida y queda a la espera de que se conecten los jugadores faltantes para inciarla. Si se selecciona la opción de unirse a una partida, el servidor envía al cliente todas las partidas que están disponibles (cantidad de jugadores actual en la partida y cantidad de jugadores necesarios para inciarla), es decir aquellas que no comenzaron aún. Cuando el cliente se une a una partida, el servidor envía el archivo correspondiente al nivel y los fondos del mismo. Cuando se unió el último jugador necesario para iniciar la partida, esta comienza.\\
 \indent El juego transcurre y cuando solo queda un equipo o ninguno (todos perdieron), se muestra en los clientes una pantalla haciendo referencia a si ganaron o perdieron, y cerrando dicha ventana la aplicación termina. Si un cliente se desconecta de la partida, se muestra automáticamente la pantalla indicando que perdió.\\
 \indent Cada vez que una partida finaliza el servidor la remueve.
-
-
-
-
