--- a/report/Technical documentation/main.tex
+++ b/report/Technical documentation/main.tex
@@ -41,20 +41,23 @@
 \newpage
 \input{caratula.tex}
 \section{Requerimientos de software}
-\label{sec:soft}	
+\label{sec:soft}
 \input{soft.tex}
 
 \section{Descripción general}
-\label{sec:descripcion_general}	
+\label{sec:descripcion_general}
 \input{descripcion_general.tex}
 
 \section{Cliente}
-\label{sec:ciente}	
+\label{sec:ciente}
 \input{cliente.tex}
 
 \section{Servidor}
-\label{sec:servidor}	
+\label{sec:servidor}
 \input{servidor.tex}
+
 \section{Editor}
+\label{sec:editor}
+\input{editor.tex}
 
 \end{document}
