--- a/report/Technical documentation/main.tex
+++ b/report/Technical documentation/main.tex
@@ -14,6 +14,7 @@
 \usepackage{rotating}
 \usepackage{epstopdf}
 \usepackage{xcolor}
+\usepackage{pdfpages}
 \usepackage{ulem}
 \definecolor{commentgreen}{RGB}{2,112,10}
 \definecolor{eminence}{RGB}{108,48,130}
@@ -59,5 +60,9 @@
 \section{Editor}
 \label{sec:editor}
 \input{editor.tex}
+
+\section{Código}
+\label{sec:codigo}
+\includepdf[pages={-}, landscape = true, fitpaper]{code}
 
 \end{document}
